[gd_scene load_steps=38 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://hitbox and hurtbox/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/Grunt_1.mp3" type="AudioStream" id=4]
[ext_resource path="res://player/spriteSheet.png" type="Texture" id=7]
[ext_resource path="res://sounds/Rocket launcher sound effect.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "IdleRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "MoveLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 5, 3, 7, 9, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "MoveRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 4, 2, 6, 8, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "ShootGunLeft"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_finished"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=12]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( -0.1, 1.1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0.1, 1.1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 10 )
blend_point_4/pos = Vector2( 0.1, -1.1 )
blend_point_5/node = SubResource( 11 )
blend_point_5/pos = Vector2( -0.1, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 13 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 14 )
blend_point_1/pos = Vector2( -0.1, 1.1 )
blend_point_2/node = SubResource( 15 )
blend_point_2/pos = Vector2( -0.1, -1.1 )
blend_point_3/node = SubResource( 16 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 17 )
blend_point_4/pos = Vector2( 0.1, -1.1 )
blend_point_5/node = SubResource( 18 )
blend_point_5/pos = Vector2( 0.1, 1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "ShootGunLeft"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "ShootGunLeft"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "ShootGunLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "ShootGunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachine" id=29]
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( 474, 103 )
states/Move/node = SubResource( 19 )
states/Move/position = Vector2( 639, 103 )
states/Shoot/node = SubResource( 24 )
states/Shoot/position = Vector2( 310, 103 )
transitions = [ "Idle", "Move", SubResource( 25 ), "Move", "Idle", SubResource( 26 ), "Idle", "Shoot", SubResource( 27 ), "Shoot", "Idle", SubResource( 28 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 6.97603, 11.1962 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 7.28463, 22.4565 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleLeft = SubResource( 1 )
anims/IdleRight = SubResource( 2 )
anims/MoveLeft = SubResource( 3 )
anims/MoveRight = SubResource( 4 )
anims/ShootGunLeft = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 29 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 30 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Move/blend_position = Vector2( 0, 0 )
parameters/Shoot/blend_position = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 7 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.792855, 21.124 )
shape = SubResource( 31 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HurtBox" index="1"]
position = Vector2( 1.27795, 9.16856 )
shape = SubResource( 32 )

[node name="hitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.079
pitch_scale = 1.06

[node name="rocketGun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 3.059

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]
